k8s/backend.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cloudbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: backend
          image: 45.153.191.7:30500/cloudbox-backend:latest
          ports:
            - containerPort: 8080
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cloudbox
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
