k8s/frontend.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: cloudbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: frontend
          image: 45.153.191.7:30500/cloudbox-frontend:latest
          ports:
            - containerPort: 80

---
# Service
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: cloudbox
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
