k8s/minio.yaml
---
# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: cloudbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: quay.io/minio/minio:latest
          command:
            - minio
            - server
            - /data
            - --console-address
            - :9001
          volumeMounts:
            - mountPath: /data
              name: minio-storage
          ports:
            - containerPort: 9000
            - containerPort: 9001
      volumes:
        - name: minio-storage
          persistentVolumeClaim:
            claimName: minio-pvc
---
# 3. Service
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: cloudbox
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
  selector:
    app: minio
