k8s/postgres.yaml
---
# 2. Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cloudbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
# 3. Service
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cloudbox
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
